# RAG-pipeline

./: README.md  app.py  config.py  document_processor.py  main.py  pyproject.toml  rag_handler.py  requirements.txt  test.py  test_ui.py  vector_store_manager.py
vector_stores/28486a5596213cc10995afe0e717df58/: chroma.sqlite3
